<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="apackage.test.com.testsdk.MainActivity">

    <Button
        android:id="@+id/bt_achievement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/achievement" />
    <Button
        android:id="@+id/bt_leaderboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard"
        android:layout_below="@+id/bt_achievement"/>

    <Button
        android:id="@+id/bt_screenshot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/screenshot"
        android:layout_below="@+id/bt_leaderboard"/>
    <Button
         android:id="@+id/bt_gamepage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/gamepage"
         android:layout_below="@+id/bt_screenshot"/>
     <Button
         android:id="@+id/bt_comment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/comment"
         android:layout_below="@+id/bt_gamepage"/>
     <Button
         android:id="@+id/bt_developer_games"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/developer_games"
         android:layout_below="@+id/bt_comment"/>
     <Button
         android:id="@+id/bt_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/login"
         android:layout_below="@+id/bt_developer_games"/>


    <Button
        android:id="@+id/bt_guss_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guess_number_game"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>
