<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/leaderboard_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/leaderboard_info"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/et_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_below="@+id/tv_info"
        android:inputType="number"
        android:hint="@string/score"/>

    <Button
        android:id="@+id/bt_submit_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_score"
        android:layout_centerHorizontal="true"
        android:text="@string/submit_score"/>

    <TextView
        android:id="@+id/tv_top_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@+id/bt_submit_score"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="top 10 user: "/>

    <Button
        android:id="@+id/bt_show_leaderboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_leaderboard"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        />

</RelativeLayout>
