<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_caption"
        android:id="@+id/et_caption"
        android:padding="8dp"
        android:layout_margin="32dp"
        android:layout_above="@+id/ll_btn"/>


    <LinearLayout
        android:layout_centerInParent="true"
        android:id="@+id/ll_btn"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/bt_intent_screenshot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_intent_screenshot"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/bt_service_screenshot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_screenshot_by_service"
            android:textAllCaps="false"
            />

    </LinearLayout>



</RelativeLayout>
